tests/parse-errors/apostropheWithSpaceBefore.rock
Tommy 's cool
say Tommy